<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
	<LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="3dip">
		<TextView 
	        style="@style/HeaderText"
		    android:layout_width="200dip"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dip"
		    android:paddingLeft="10dip"
		    android:paddingTop="3dip"
		    android:textSize="25sp"
		    android:gravity="left"
		    android:id="@+id/headUser"
	        android:text="@string/title_activity_user_profile"
	        />
	    <TextView
        
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/username" />
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:id="@+id/up_username"
	        android:enabled="false"
	        android:textColor="#eeeeee"/>
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/email" />
	    <EditText
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	        android:id="@+id/up_mail"
	        android:textColor="#eeeeee"
	        />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/old_pass" />
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:id="@+id/up_old_password"
	        android:textColor="#eeeeee"
	        />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/password" />
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:id="@+id/up_password"
	        android:textColor="#eeeeee"
	        />
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/conf_pass" />
	    <EditText 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPassword"
	        android:id="@+id/up_password1"
	        android:textColor="#eeeeee"
	        />
	    <Button 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/save"
	        android:layout_marginTop="15dip"
	        android:id="@+id/up_submit"
	        android:onClick="updateUser"
	        android:background="@drawable/bg_btn"
	        />
	
	</LinearLayout>
</ScrollView>