<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:padding="3dip">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
		
        

    
		<TextView 
			style="@style/HeaderText"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="10dip"
		    android:paddingLeft="10dip"
		    android:paddingTop="3dip"
		    android:textSize="25sp"
		    android:gravity="left"
		    android:id="@+id/regHead"
			android:text="@string/reg"
			/>
        
    
    
		<TextView 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/username"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
			/>
		<EditText 
			android:id="@+id/reg_user"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:inputType="text"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
			/>
		<TextView 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/password"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
		/>
		<EditText 
			android:id="@+id/reg_pass"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:inputType="textPassword"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
			
		/>
        
		<TextView 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/email"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
			/>
		<EditText 
			android:id="@+id/reg_email"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:inputType="textWebEmailAddress"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
		/>
		<Button 
			android:id="@+id/submitBtn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10pt"
			android:layout_marginLeft="5pt"
			android:layout_marginRight="5pt"
			android:text="@string/submit"
			android:background="@drawable/bg_btn"
		/>
	</LinearLayout>

</ScrollView>
