<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    

    <TextView
        style="@style/HeaderText"
	    android:layout_width="200dip"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dip"
	    android:paddingLeft="10dip"
	    android:textSize="25sp"
	    android:gravity="left"
        android:id="@+id/indexHead"
        android:text="@string/title_activity_home"/>
    
    <TextView
        android:id="@+id/menu_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:shadowColor="#87888A"
        android:shadowRadius="5"
        android:singleLine="false"
        android:background="@drawable/menu"
        android:drawableTop="@drawable/search"
        android:textColor="#33B5E5"
        android:text="@string/search"/>
    <TextView 
        android:id="@+id/menu_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_city"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="15dip"
        android:layout_marginRight="10dip"
        android:gravity="right|center_vertical"
        android:drawableRight="@drawable/view_city"
        style="@style/home_menu"/>
    <TextView 
        android:id="@+id/menu_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_acount"
        android:gravity="right|center_vertical"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5dip"
        android:drawableRight="@drawable/user_profile"
        style="@style/home_menu"/>
    <TextView 
        android:id="@+id/menu_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="5dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:drawableRight="@drawable/about"
        android:drawablePadding="3dip"
        android:gravity="right|center_vertical"
        style="@style/home_menu"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="5dip"
        android:gravity="bottom|center"
        android:layout_marginBottom="15dip"
        >
        <ImageView 
            android:id="@+id/menu_about"
            android:src="@drawable/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/menu"
            android:contentDescription="@drawable/about"/>
        <ImageView 
            android:id="@+id/menu_help"
            android:src="@drawable/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:background="@drawable/menu"
            android:contentDescription="@drawable/about"/>
        
    </LinearLayout>

</LinearLayout>