<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"     
    android:orientation="vertical"
    >
    <TextView 
        style="@style/HeaderText"
	    android:layout_width="200dip"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dip"
	    android:paddingLeft="10dip"
	    android:paddingTop="3dip"
	    android:textSize="25sp"
	    android:gravity="left"
	    android:id="@+id/loginHead"
        android:text="@string/title_activity_login"
        
        />
    <TextView 
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"/> 
	
   	<EditText 
       	android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginBottom="5pt"
        android:inputType="text"
        android:hint="@string/username"
        android:singleLine="true" 
        
        />
	<TextView 
	    android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"/> 
        
	<EditText 
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:singleLine="true"
       
        />
	    
	<Button 
        android:id="@+id/loginBtn"
        android:text="@string/title_activity_login"
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:layout_marginTop="10pt"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:background="@drawable/bg_btn"
        android:onClick="onClickBtn"
        
        
        />

</LinearLayout>
